...
        }}>
        <Tab.Screen
          name="IdentitiesTab"
          component={IdentitiesNavigator}
          options={{
            title: 'Identities',
            tabBarButtonTestID: 'tab-identities',
            tabBarIcon: ({focused}) => <TabIcon label="◎" focused={focused} />,
          }}
        />
        <Tab.Screen
          name="ContactsTab"
          component={ContactsNavigator}
...
